# Telegram-bot-IMEI

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: bot.py  config.py  dependencies.py  exceptions.py
app/database/: database.py
app/handlers/: imei_handler.py
app/integrations/: access_control_service.py  factories.py  imei_validation_service.py  send_request.py
app/interfaces/: access_control_service_interface.py  imei_validation_service_interface.py  token_repository_interface.py
app/middlewares/: di_middleware.py
app/repositories/: factories.py  token_repository.py
app/schemas/: pyd.py
app/services/: imei_validation_service.py  token_service.py  whitelist_service.py
app/stubs/: access_control_service_stub.py  imei_validation_service_stub.py  token_repository_stub.py
